Develope dark mode on main-header and FAQ section, Refactor and clean up, need more fix

--- a/dark-mode.scss
+++ b/dark-mode.scss
@@ -1,32 +1,11 @@
-// $color-primary: #6366F1;
-// $color-white: #fff;
-// $color-success: #22C55E;
 
-// $tablet-size: 768px;
-// $tablet-landscape-size: 992px;
-// $desktop-size: 1200px;
+body {
+  .show-light { display: block;};
+  .show-dark { display: none;};
 
-// $clr-gray-100: #f3f6ff; 
-// $clr-gray-200: #EFF2FC; 
-// $clr-gray-300: #E2E5F1; 
-// $clr-gray-400: #D4D7E5; 
-// $clr-gray-500: #B4B7C9; 
-// $clr-gray-600: #9397AD; 
-// $clr-gray-700: #585C7B; 
-// $clr-gray-800: #33354D; 
-// $clr-gray-900: #0B0F19; 
-
-
-// $clr-bg: $color-white;
-// $clr-bg-100: $clr-gray-100;
-// $clr-text-body: $clr-gray-700;
-// $clr-text-heading: $clr-gray-900;
-// $clr-text-navigation: $clr-gray-800;
-// $clr-logo-bg: #F3F6FF;
-
-
-
-
-body.dark {
-  
+  &.dark {
+    .show-light { display: none;};
+    .show-dark { display: block;};
+  }
 }
+
