--- a/variables.css
+++ b/variables.css
@@ -1,26 +1,19 @@
-
-$tablet-size: 768px;
-$tablet-landscape-size: 992px;
-$desktop-size: 1200px;
-
 :root {
   --clr-gray-100: #f3f6ff;
   --clr-gray-200: #EFF2FC;
   --clr-gray-300: #E2E5F1;
   --clr-gray-400: #D4D7E5;
   --clr-gray-500: #B4B7C9;
-  --clr-gray-600: #9397AD; 
-  --clr-gray-700: #585C7B; 
-  --clr-gray-800: #33354D; 
-  --clr-gray-850: #1c2029; 
-  --clr-gray-900: #0B0F19; 
-
+  --clr-gray-600: #9397AD;
+  --clr-gray-700: #585C7B;
+  --clr-gray-800: #33354D;
+  --clr-gray-850: #1c2029;
+  --clr-gray-900: #0B0F19;
   --clr-primary: #6366F1;
   --clr-white: #fff;
   --clr-contact-us: #22C55E;
   --clr-ingredient-light-mode: #efe5fa;
   --clr-ingredient-dark-mode: #161429;
- 
 }
 
 body {
@@ -28,7 +21,6 @@ body {
   --clr-bg-main: var(--clr-white);
   --clr-bg-accordion: var(--clr-white);
   --clr-bg-light: var(--clr-white);
-
   --clr-text-body: var(--clr-gray-700 );
   --clr-text-heading: var(--clr-gray-900);
   --clr-text-navigation: var(--clr-gray-800);
@@ -40,27 +32,21 @@ body {
   --clr-bg-btn-dark: var(--clr-gray-900);
   --clr-logo-text: var(--clr-gray-900);
   --clr-bg-accordion-btn-chevron-down: var(--clr-bg-secondry);
-
-  
-  &.dark {
-    color-scheme: dark;
-    
-    --clr-bg-secondry: var(--clr-gray-850);
-    --clr-bg-main: var(--clr-gray-900);
-    
-    --clr-bg-accordion: var(--clr-gray-850);
-    --clr-text-body: var(--clr-gray-600);
-    --clr-logo-text: var(--clr-gray-100);
-    --clr-border-gray: var(--clr-gray-700);
-    --clr-bg-light: var(--clr-gray-850);
-    --clr-text-heading: var(--clr-white);
-    --clr-accordion-item-header: var(--clr-white);
-    --clr-bg-main-header-ingredient-darker: var(--clr-ingredient-dark-mode);
-    --clr-bg-main-header-ingredient-lighter: var(--clr-gray-900);
-    --clr-bg-btn-dark: var(--clr-gray-200);
-    --clr-accordion-item-heading: var(--clr-white);
-    --clr-bg-accordion-btn-chevron-down: var(--clr-gray-800);
-
-
-  }
 }
+body.dark {
+  color-scheme: dark;
+  --clr-bg-secondry: var(--clr-gray-850);
+  --clr-bg-main: var(--clr-gray-900);
+  --clr-bg-accordion: var(--clr-gray-850);
+  --clr-text-body: var(--clr-gray-600);
+  --clr-logo-text: var(--clr-gray-100);
+  --clr-border-gray: var(--clr-gray-700);
+  --clr-bg-light: var(--clr-gray-850);
+  --clr-text-heading: var(--clr-white);
+  --clr-accordion-item-header: var(--clr-white);
+  --clr-bg-main-header-ingredient-darker: var(--clr-ingredient-dark-mode);
+  --clr-bg-main-header-ingredient-lighter: var(--clr-gray-900);
+  --clr-bg-btn-dark: var(--clr-gray-200);
+  --clr-accordion-item-heading: var(--clr-white);
+  --clr-bg-accordion-btn-chevron-down: var(--clr-gray-800);
+}/*# sourceMappingURL=variables.css.map */
